--- a/index.html
+++ b/index.html
@@ -12,8 +12,42 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Material Design Bootstrap -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.16.0/css/mdb.min.css" rel="stylesheet">
+
+	<!-- Custom style -->
+	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
+
 </head>
 <body>
+
+	<!-- Navbar -->
+	<nav class="navbar noshadow">
+
+		<!-- ml-auto => Right align navbar items. set the margin left to auto -->
+		<div class="ml-auto">
+
+			<!-- Gmail and Images -->
+			<a class="navbar-brand menu-item" href="https://www.google.com/gmail/" title="Gmail">
+				Gmail
+			</a>
+			<a class="navbar-brand menu-item" href="https://www.google.com/imghp?hl=en" title="Images">
+				Images
+			</a>
+
+			<!-- Apps -->
+			<a href="" title="Apps">
+				<img src="resources/images/google_apps_icon.svg" class="img-fluid apps-icon" alt="Responsive image">
+			</a>
+
+			<!-- Avatar -->
+			<a href="" title="">
+				<img src="resources/images/avatar.jpg" class="img-fluid rounded-circle avatar" alt="Responsive image">
+			</a>
+
+	  	</div>
+
+
+	</nav>	
+
 
 	<!-- Top container -->
 	<div class="container">
