Added google doodle. Resized all the images to right size and removed width property from css

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
 			<!-- Apps -->
 			<a href="" title="Apps">
-				<img src="resources/images/google_apps_icon.svg" class="img-fluid apps-icon" alt="Responsive image">
+				<img src="resources/images/google_apps_icon.png" class="img-fluid apps-icon" alt="Responsive image">
 			</a>
 
 			<!-- Avatar -->
 			<a href="" title="">
-				<img src="resources/images/avatar.jpg" class="img-fluid rounded-circle avatar" alt="Responsive image">
+				<img src="resources/images/avatar.jpg" class="img-fluid rounded-circle" alt="Responsive image">
 			</a>
 
 	  	</div>
@@ -51,6 +51,10 @@
 
 	<!-- Top container -->
 	<div class="container">
+
+		<!-- Google logo doodle -->
+		<img src="resources/images/google_logo.png" alt="Google logo" title="Google" class="doodle mx-auto d-block">
+		
 
 	</div>
 
