--- a/index.html
+++ b/index.html
@@ -53,8 +53,19 @@
 	<div class="container">
 
 		<!-- Google logo doodle -->
-		<img src="resources/images/google_logo.png" alt="Google logo" title="Google" class="doodle mx-auto d-block">
+		<img src="resources/images/google_logo.png" alt="Google logo" title="Google" class="doodle mx-auto d-block mt-100 mb-4">
 		
+
+		<!-- Search bar -->
+		<div class="card">
+			<div class="card-body align-items-center d-flex justify-content-center">
+				<div class="mr-10">
+					<i class="fas fa-search" aria-hidden="true"></i>
+				</div>
+				<input class="form-control" type="text" placeholder="Search Google or type a URL" aria-label="Search">
+				<i class="fas fa-microphone-alt"></i>
+			</div>
+		</div>
 
 	</div>
 
