--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		
 
 		<!-- Search bar -->
-		<div class="card">
+<!-- 		<div class="card mb-20">
 			<div class="card-body align-items-center d-flex justify-content-center">
 				<div class="mr-10">
 					<i class="fas fa-search" aria-hidden="true"></i>
@@ -65,7 +65,200 @@
 				<input class="form-control" type="text" placeholder="Search Google or type a URL" aria-label="Search">
 				<i class="fas fa-microphone-alt"></i>
 			</div>
-		</div>
+		</div> -->
+
+		<!-- Quick links -->
+		<div class="card-deck-box mx-auto">
+
+			<div class="row row-cols-3 row-cols-sm-3 row-cols-md-4 row-cols-lg-5">
+
+				<div class="col mb-4">
+					<div class="card quicklink-box noshadow">
+
+						<div class="text-right quicklink-options pt-1 mr-1">
+							<i class="fas fa-ellipsis-v"></i>
+						</div>
+
+						<div class="mb-2 text-center">
+							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			 			</div>
+
+						<div class="mb-2 text-center">
+							<a href="#" class="stretched-link quicklink-text">Home</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col mb-4">
+					<div class="card quicklink-box noshadow">
+
+						<div class="text-right quicklink-options pt-1 mr-1">
+							<i class="fas fa-ellipsis-v"></i>
+						</div>
+
+						<div class="mb-2 text-center">
+							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			 			</div>
+
+						<div class="mb-2 text-center">
+							<a href="#" class="stretched-link quicklink-text">Home</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col mb-4">
+					<div class="card quicklink-box noshadow">
+
+						<div class="text-right quicklink-options pt-1 mr-1">
+							<i class="fas fa-ellipsis-v"></i>
+						</div>
+
+						<div class="mb-2 text-center">
+							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			 			</div>
+
+						<div class="mb-2 text-center">
+							<a href="#" class="stretched-link quicklink-text">Home</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col mb-4">
+					<div class="card quicklink-box noshadow">
+
+						<div class="text-right quicklink-options pt-1 mr-1">
+							<i class="fas fa-ellipsis-v"></i>
+						</div>
+
+						<div class="mb-2 text-center">
+							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			 			</div>
+
+						<div class="mb-2 text-center">
+							<a href="#" class="stretched-link quicklink-text">Home</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col mb-4">
+					<div class="card quicklink-box noshadow">
+
+						<div class="text-right quicklink-options pt-1 mr-1">
+							<i class="fas fa-ellipsis-v"></i>
+						</div>
+
+						<div class="mb-2 text-center">
+							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			 			</div>
+
+						<div class="mb-2 text-center">
+							<a href="#" class="stretched-link quicklink-text">Home</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col mb-4">
+					<div class="card quicklink-box noshadow">
+
+						<div class="text-right quicklink-options pt-1 mr-1">
+							<i class="fas fa-ellipsis-v"></i>
+						</div>
+
+						<div class="mb-2 text-center">
+							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			 			</div>
+
+						<div class="mb-2 text-center">
+							<a href="#" class="stretched-link quicklink-text">Home</a>
+						</div>
+
+					</div>
+				</div>
+
+				<!-- 7 & 8 : d-none d-md-block : hide on screens smaller than md -->
+
+				<div class="col d-none d-md-block mb-4">
+					<div class="card quicklink-box noshadow">
+
+						<div class="text-right quicklink-options pt-1 mr-1">
+							<i class="fas fa-ellipsis-v"></i>
+						</div>
+
+						<div class="mb-2 text-center">
+							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			 			</div>
+
+						<div class="mb-2 text-center">
+							<a href="#" class="stretched-link quicklink-text">Home</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col d-none d-md-block mb-4">
+					<div class="card quicklink-box noshadow">
+
+						<div class="text-right quicklink-options pt-1 mr-1">
+							<i class="fas fa-ellipsis-v"></i>
+						</div>
+
+						<div class="mb-2 text-center">
+							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			 			</div>
+
+						<div class="mb-2 text-center">
+							<a href="#" class="stretched-link quicklink-text">Home</a>
+						</div>
+
+					</div>
+				</div>
+
+				<!-- 9 & 10 : d-none d-lg-block : hide on screens smaller than large -->
+
+				<div class="col d-none d-lg-block mb-4">
+					<div class="card quicklink-box noshadow">
+
+						<div class="text-right quicklink-options pt-1 mr-1">
+							<i class="fas fa-ellipsis-v"></i>
+						</div>
+
+						<div class="mb-2 text-center">
+							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			 			</div>
+
+						<div class="mb-2 text-center">
+							<a href="#" class="stretched-link quicklink-text">Home</a>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col d-none d-lg-block mb-4">
+					<div class="card quicklink-box noshadow">
+
+						<div class="text-right quicklink-options pt-1 mr-1">
+							<i class="fas fa-ellipsis-v"></i>
+						</div>
+
+						<div class="mb-2 text-center">
+							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			 			</div>
+
+						<div class="mb-2 text-center">
+							<a href="#" class="stretched-link quicklink-text">Home</a>
+						</div>
+
+					</div>
+				</div>
+
+			</div>
+
+	
 
 	</div>
 
