Understood flex to an extend and have re-implemented doodle and search-bar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
 	<!-- Navbar -->
 	<nav class="navbar noshadow">
-
 		<!-- ml-auto => Right align navbar items. set the margin left to auto -->
 		<div class="ml-auto">
 
@@ -44,221 +43,41 @@
 			</a>
 
 	  	</div>
-
-
-	</nav>	
-
+	</nav>
 
 	<!-- Top container -->
 	<div class="container">
 
-		<!-- Google logo doodle -->
-		<img src="resources/images/google_logo.png" alt="Google logo" title="Google" class="doodle mx-auto d-block mt-100 mb-4">
-		
-
-		<!-- Search bar -->
-<!-- 		<div class="card mb-20">
-			<div class="card-body align-items-center d-flex justify-content-center">
-				<div class="mr-10">
-					<i class="fas fa-search" aria-hidden="true"></i>
-				</div>
-				<input class="form-control" type="text" placeholder="Search Google or type a URL" aria-label="Search">
-				<i class="fas fa-microphone-alt"></i>
+		<!-- Doodle -->
+		<div class="doodle-top-container">
+			<div class="doodle-container">
+				<img src="resources/images/google_logo.png" alt="Google logo" title="Google" class="doodle">
 			</div>
-		</div> -->
+		</div>
 
-		<!-- Quick links -->
-		<div class="card-deck-box mx-auto">
 
-			<div class="row row-cols-3 row-cols-sm-3 row-cols-md-4 row-cols-lg-5">
-
-				<div class="col mb-4">
-					<div class="card quicklink-box noshadow">
-
-						<div class="text-right quicklink-options pt-1 mr-1">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="mb-2 text-center">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-			 			</div>
-
-						<div class="mb-2 text-center">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-
+		<!-- Search Bar -->
+		<div class="search-top-container">
+			<div class="card search-bar-rounded m-auto">
+				<div class="search-bar-container">
+					<div class="search-icon-container">
+						<i class="fas fa-search" aria-hidden="true"></i>
 					</div>
-				</div>
 
-				<div class="col mb-4">
-					<div class="card quicklink-box noshadow">
-
-						<div class="text-right quicklink-options pt-1 mr-1">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="mb-2 text-center">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-			 			</div>
-
-						<div class="mb-2 text-center">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-
+					<div class="search-field-container">
+						<input class="form-control border-style-none" type="text" placeholder="Search Google or type a URL" aria-label="Search">
 					</div>
+
+					<div class="mic-container">
+						<i class="fas fa-microphone-alt"></i>
+					</div>			
 				</div>
-
-				<div class="col mb-4">
-					<div class="card quicklink-box noshadow">
-
-						<div class="text-right quicklink-options pt-1 mr-1">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="mb-2 text-center">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-			 			</div>
-
-						<div class="mb-2 text-center">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-
-					</div>
-				</div>
-
-				<div class="col mb-4">
-					<div class="card quicklink-box noshadow">
-
-						<div class="text-right quicklink-options pt-1 mr-1">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="mb-2 text-center">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-			 			</div>
-
-						<div class="mb-2 text-center">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-
-					</div>
-				</div>
-
-				<div class="col mb-4">
-					<div class="card quicklink-box noshadow">
-
-						<div class="text-right quicklink-options pt-1 mr-1">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="mb-2 text-center">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-			 			</div>
-
-						<div class="mb-2 text-center">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-
-					</div>
-				</div>
-
-				<div class="col mb-4">
-					<div class="card quicklink-box noshadow">
-
-						<div class="text-right quicklink-options pt-1 mr-1">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="mb-2 text-center">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-			 			</div>
-
-						<div class="mb-2 text-center">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-
-					</div>
-				</div>
-
-				<!-- 7 & 8 : d-none d-md-block : hide on screens smaller than md -->
-
-				<div class="col d-none d-md-block mb-4">
-					<div class="card quicklink-box noshadow">
-
-						<div class="text-right quicklink-options pt-1 mr-1">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="mb-2 text-center">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-			 			</div>
-
-						<div class="mb-2 text-center">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-
-					</div>
-				</div>
-
-				<div class="col d-none d-md-block mb-4">
-					<div class="card quicklink-box noshadow">
-
-						<div class="text-right quicklink-options pt-1 mr-1">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="mb-2 text-center">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-			 			</div>
-
-						<div class="mb-2 text-center">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-
-					</div>
-				</div>
-
-				<!-- 9 & 10 : d-none d-lg-block : hide on screens smaller than large -->
-
-				<div class="col d-none d-lg-block mb-4">
-					<div class="card quicklink-box noshadow">
-
-						<div class="text-right quicklink-options pt-1 mr-1">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="mb-2 text-center">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-			 			</div>
-
-						<div class="mb-2 text-center">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-
-					</div>
-				</div>
-
-				<div class="col d-none d-lg-block mb-4">
-					<div class="card quicklink-box noshadow">
-
-						<div class="text-right quicklink-options pt-1 mr-1">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="mb-2 text-center">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-			 			</div>
-
-						<div class="mb-2 text-center">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-
-					</div>
-				</div>
-
 			</div>
+		</div>
 
-	
+
+
+
 
 	</div>
 
