One good quick link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,21 @@
 		</div>
 
 
+		<!-- Quick Links -->
 
+		<div class="card quicklink-container noshadow">
+			<div class="quicklink-icon-container">
+				<i class="fas fa-ellipsis-v"></i>
+			</div>
+
+			<div class="quicklink-thumbnail-container">
+				<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			</div>
+
+			<div class="quicklink-text-container">
+				<a href="#" class="stretched-link quicklink-text">Home</a>
+			</div>			
+		</div>
 
 
 	</div>
