--- a/index.html
+++ b/index.html
@@ -78,19 +78,182 @@
 
 		<!-- Quick Links -->
 
-		<div class="card quicklink-container noshadow">
-			<div class="quicklink-icon-container">
-				<i class="fas fa-ellipsis-v"></i>
+		<div class="row row-cols-3 row-cols-sm-3 row-cols-md-4 row-cols-lg-5">
+
+			<!-- 1 -->
+			<div class="col col-container">
+				<div class="card quicklink-container noshadow">
+					<div class="quicklink-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklink-thumbnail-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklink-text-container">
+						<a href="#" class="stretched-link quicklink-text">Home</a>
+					</div>
+				</div>
 			</div>
 
-			<div class="quicklink-thumbnail-container">
-				<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+			<!-- 2 -->
+			<div class="col col-container">
+				<div class="card quicklink-container noshadow">
+					<div class="quicklink-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklink-thumbnail-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklink-text-container">
+						<a href="#" class="stretched-link quicklink-text">Home</a>
+					</div>
+				</div>
 			</div>
 
-			<div class="quicklink-text-container">
-				<a href="#" class="stretched-link quicklink-text">Home</a>
-			</div>			
+			<!-- 3 -->
+			<div class="col col-container">
+				<div class="card quicklink-container noshadow">
+					<div class="quicklink-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklink-thumbnail-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklink-text-container">
+						<a href="#" class="stretched-link quicklink-text">Home</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- 4 -->
+			<div class="col col-container">
+				<div class="card quicklink-container noshadow">
+					<div class="quicklink-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklink-thumbnail-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklink-text-container">
+						<a href="#" class="stretched-link quicklink-text">Home</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- 5 -->
+			<div class="col col-container">
+				<div class="card quicklink-container noshadow">
+					<div class="quicklink-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklink-thumbnail-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklink-text-container">
+						<a href="#" class="stretched-link quicklink-text">Home</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- 6 -->
+			<div class="col col-container">
+				<div class="card quicklink-container noshadow">
+					<div class="quicklink-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklink-thumbnail-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklink-text-container">
+						<a href="#" class="stretched-link quicklink-text">Home</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- 7 & 8 : d-none d-md-block : hide on screens smaller than md -->
+			<!-- 7 -->
+			<div class="col col-container d-none d-md-block">
+				<div class="card quicklink-container noshadow">
+					<div class="quicklink-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklink-thumbnail-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklink-text-container">
+						<a href="#" class="stretched-link quicklink-text">Home</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- 8 -->
+			<div class="col col-container d-none d-md-block">
+				<div class="card quicklink-container noshadow">
+					<div class="quicklink-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklink-thumbnail-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklink-text-container">
+						<a href="#" class="stretched-link quicklink-text">Home</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- 9 & 10 : d-none d-lg-block : hide on screens smaller than large -->
+			<!-- 9 -->
+			<div class="col col-container d-none d-lg-block">
+				<div class="card quicklink-container noshadow">
+					<div class="quicklink-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklink-thumbnail-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklink-text-container">
+						<a href="#" class="stretched-link quicklink-text">Home</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- 10 -->
+			<div class="col col-container d-none d-lg-block">
+				<div class="card quicklink-container noshadow">
+					<div class="quicklink-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklink-thumbnail-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklink-text-container">
+						<a href="#" class="stretched-link quicklink-text">Home</a>
+					</div>
+				</div>
+			</div>
+
 		</div>
+
 
 
 	</div>
