Added customize container@

--- a/index.html
+++ b/index.html
@@ -268,11 +268,21 @@
 			</div>
 		</div>
 
-		
-		<!-- Customize Button -->
-		
+	</div>
 
+	<!-- Customize Button -->
+	<div class="customize-top-container fixed-bottom">
+		<div class="card customize-rounded ml-auto">
+			<div class="customize-container">
+				<div class="customize-icon-container">
+					<i class="fas fa-pen"></i>
+				</div>
 
+				<div class="customize-text-container">
+					<h3>Customize</h3>
+				</div>
+			</div>
+		</div>
 	</div>
 
 
