Added gitignore. Converted Navbar and Doodle to use sass.

--- a/index.html
+++ b/index.html
@@ -13,41 +13,47 @@
 	<!-- Material Design Bootstrap -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.16.0/css/mdb.min.css" rel="stylesheet">
 
-	<!-- Custom style -->
+	<!-- Custom-style -->
 	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
-
 </head>
 <body>
 
 	<!-- Navbar -->
 	<nav class="navbar noshadow">
-		<!-- ml-auto => Right align navbar items. set the margin left to auto -->
-		<div class="ml-auto">
 
-			<!-- Gmail and Images -->
-			<a class="navbar-brand menu-item" href="https://www.google.com/gmail/" title="Gmail">
-				Gmail
-			</a>
-			<a class="navbar-brand menu-item" href="https://www.google.com/imghp?hl=en" title="Images">
-				Images
-			</a>
+		<div class="navbar-top-container ml-auto">
 
-			<!-- Apps -->
-			<a href="" title="Apps">
-				<img src="resources/images/google_apps_icon.png" class="img-fluid apps-icon" alt="Responsive image">
-			</a>
+			<div class="navbar-text-container">
+				<!-- Gmail and Images -->
+				<a class="navbar-menu-item navbar-text-item" href="https://www.google.com/gmail/" title="Gmail">
+					Gmail
+				</a>
+				<a class="navbar-menu-item navbar-text-item" href="https://www.google.com/imghp?hl=en" title="Images">
+					Images
+				</a>
+			</div>
 
-			<!-- Avatar -->
-			<a href="" title="">
-				<img src="resources/images/avatar.jpg" class="img-fluid rounded-circle" alt="Responsive image">
-			</a>
+			<div class="navbar-icon-container">
+				<!-- Apps -->
+				<a class="navbar-menu-item navbar-icon-item" href="" title="Apps">
+					<img src="resources/images/google_apps_icon.png" class="img-fluid" alt="Responsive image">
+				</a>
+			</div>
+			<div class="navbar-icon-container">
+				<!-- Avatar -->
+				<a class="navbar-menu-item navbar-icon-item" href="" title="">
+					<img src="resources/images/avatar.jpg" class="img-fluid rounded-circle" alt="Responsive image">
+				</a>
+			</div>
 
-	  	</div>
+		</div>
+
 	</nav>
 
-	<!-- Top container -->
-	<div class="container">
 
+	<!-- Main container -->
+	<div class="container">
+	
 		<!-- Doodle -->
 		<div class="doodle-top-container">
 			<div class="doodle-container">
@@ -55,236 +61,8 @@
 			</div>
 		</div>
 
-
-		<!-- Search Bar -->
-		<div class="search-top-container">
-			<div class="card search-bar-rounded m-auto">
-				<div class="search-bar-container">
-					<div class="search-icon-container">
-						<i class="fas fa-search" aria-hidden="true"></i>
-					</div>
-
-					<div class="search-field-container">
-						<input class="form-control border-style-none" type="text" placeholder="Search Google or type a URL" aria-label="Search">
-					</div>
-
-					<div class="mic-container">
-						<i class="fas fa-microphone-alt"></i>
-					</div>			
-				</div>
-			</div>
-		</div>
-
-		<div class="clearfix">
-			
-		</div>
-
-
-		<!-- Quick Links -->
-		<div class="quicklinks-top-container">
-
-			<div class="row row-cols-3 row-cols-sm-3 row-cols-md-4 row-cols-lg-5">
-
-				<!-- 1 -->
-				<div class="col col-container">
-					<div class="card quicklink-container noshadow">
-						<div class="quicklink-icon-container">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="quicklink-thumbnail-container">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-						</div>
-
-						<div class="quicklink-text-container">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-					</div>
-				</div>
-
-				<!-- 2 -->
-				<div class="col col-container">
-					<div class="card quicklink-container noshadow">
-						<div class="quicklink-icon-container">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="quicklink-thumbnail-container">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-						</div>
-
-						<div class="quicklink-text-container">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-					</div>
-				</div>
-
-				<!-- 3 -->
-				<div class="col col-container">
-					<div class="card quicklink-container noshadow">
-						<div class="quicklink-icon-container">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="quicklink-thumbnail-container">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-						</div>
-
-						<div class="quicklink-text-container">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-					</div>
-				</div>
-
-				<!-- 4 -->
-				<div class="col col-container">
-					<div class="card quicklink-container noshadow">
-						<div class="quicklink-icon-container">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="quicklink-thumbnail-container">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-						</div>
-
-						<div class="quicklink-text-container">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-					</div>
-				</div>
-
-				<!-- 5 -->
-				<div class="col col-container">
-					<div class="card quicklink-container noshadow">
-						<div class="quicklink-icon-container">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="quicklink-thumbnail-container">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-						</div>
-
-						<div class="quicklink-text-container">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-					</div>
-				</div>
-
-				<!-- 6 -->
-				<div class="col col-container">
-					<div class="card quicklink-container noshadow">
-						<div class="quicklink-icon-container">
-							<i class="fas fa-ellipsis-v"></i>
-						</div>
-
-						<div class="quicklink-thumbnail-container">
-							<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-						</div>
-
-						<div class="quicklink-text-container">
-							<a href="#" class="stretched-link quicklink-text">Home</a>
-						</div>
-					</div>
-				</div>
-
-				<!-- 7 & 8 : d-none d-md-block : hide on screens smaller than md -->
-				<!-- 7 -->
-				<div class="col col-container">
-					<div class="d-none d-md-block">
-						<div class="card quicklink-container noshadow">
-							<div class="quicklink-icon-container">
-								<i class="fas fa-ellipsis-v"></i>
-							</div>
-
-							<div class="quicklink-thumbnail-container">
-								<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-							</div>
-
-							<div class="quicklink-text-container">
-								<a href="#" class="stretched-link quicklink-text">Home</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- 8 -->
-				<div class="col col-container ">
-					<div class="d-none d-md-block">
-						<div class="card quicklink-container noshadow">
-							<div class="quicklink-icon-container">
-								<i class="fas fa-ellipsis-v"></i>
-							</div>
-
-							<div class="quicklink-thumbnail-container">
-								<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-							</div>
-
-							<div class="quicklink-text-container">
-								<a href="#" class="stretched-link quicklink-text">Home</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- 9 & 10 : d-none d-lg-block : hide on screens smaller than large -->
-				<!-- 9 -->
-				<div class="col col-container">
-					<div class="d-none d-lg-block">
-						<div class="card quicklink-container noshadow">
-							<div class="quicklink-icon-container">
-								<i class="fas fa-ellipsis-v"></i>
-							</div>
-
-							<div class="quicklink-thumbnail-container">
-								<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-							</div>
-
-							<div class="quicklink-text-container">
-								<a href="#" class="stretched-link quicklink-text">Home</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- 10 -->
-				<div class="col col-container">
-					<div class="d-none d-lg-block">
-						<div class="card quicklink-container noshadow">
-							<div class="quicklink-icon-container">
-								<i class="fas fa-ellipsis-v"></i>
-							</div>
-
-							<div class="quicklink-thumbnail-container">
-								<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
-							</div>
-
-							<div class="quicklink-text-container">
-								<a href="#" class="stretched-link quicklink-text">Home</a>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-
+	
 	</div>
-
-	<!-- Customize Button -->
-	<div class="customize-top-container fixed-bottom">
-		<div class="card customize-rounded ml-auto">
-			<div class="customize-container">
-				<div class="customize-icon-container">
-					<i class="fas fa-pen"></i>
-				</div>
-
-				<div class="customize-text-container">
-					<h3>Customize</h3>
-				</div>
-			</div>
-		</div>
-	</div>
-
 
 	<!-- MDB JS and JQuery -->
 	<!-- JQuery -->
