Added search bar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- Navbar -->
 	<nav class="navbar noshadow">
 
-		<div class="navbar-top-container ml-auto">
+		<div class="navbar-container ml-auto">
 
 			<div class="navbar-text-container">
 				<!-- Gmail and Images -->
@@ -55,13 +55,35 @@
 	<div class="container">
 	
 		<!-- Doodle -->
-		<div class="doodle-top-container">
+		<div class="doodle">
 			<div class="doodle-container">
-				<img src="resources/images/google_logo.png" alt="Google logo" title="Google" class="doodle">
+				<img src="resources/images/google_logo.png" alt="Google logo" title="Google">
 			</div>
 		</div>
 
-	
+
+		<!-- Search Bar -->
+		<div class="searchbar">
+			<div class="card mx-auto">
+
+				<div class="searchbar-container">
+					<div class="searchbar-icon-container">
+						<i class="fas fa-search" aria-hidden="true"></i>
+					</div>
+					<div class="searchbar-field-container">
+						<input class="form-control" type="text" placeholder="Search Google or type a URL" aria-label="Search">
+					</div>
+					<div class="searchbar-mic-container">
+						<i class="fas fa-microphone-alt"></i>
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+
+
+
 	</div>
 
 	<!-- MDB JS and JQuery -->
