Added customize button

--- a/index.html
+++ b/index.html
@@ -81,8 +81,24 @@
 			</div>
 		</div>
 
+		<div class="clearfix">			
+		</div>
 
+	</div>
 
+	<!-- Floating customize button -->
+	<div class="customize fixed-bottom">
+
+		<div class="card ml-auto">
+			<div class="customize-container">
+				<div class="customize-icon-container">
+					<i class="fas fa-pen"></i>
+				</div>
+				<div class="customize-text-container">
+					Customize
+				</div>
+			</div>
+		</div>
 
 	</div>
 
