--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 		</div>
 
 
+		<!-- Clear fix -->
+		<div class="clearfix">
+		</div>
+
 		<!-- Search Bar -->
 		<div class="searchbar">
 			<div class="card mx-auto">
@@ -81,7 +85,27 @@
 			</div>
 		</div>
 
-		<div class="clearfix">			
+		<!-- Clear fix -->
+		<div class="clearfix">
+		</div>
+
+		<!-- QuickLinks -->
+		<div class="quicklinks">
+			<div class="card noshadow">
+				<div class="quicklinks-container">
+					<div class="quicklinks-icon-container">
+						<i class="fas fa-ellipsis-v"></i>
+					</div>
+
+					<div class="quicklinks-avatar-container">
+						<img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="rounded-circle" alt="Responsive image">
+					</div>
+
+					<div class="quicklinks-text-container">
+						<a href="#" class="stretched-link quicklinks-text">Home</a>
+					</div>
+				</div>
+			</div>
 		</div>
 
 	</div>
