Added todo list

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 </head>
 <body>
 
+	<!-- 	
+		TODO: 1. Delayed display of the quicklink option icon
+		  	  2. Animating the quicklinks icon when the browser is resized.
+
+		Revisit after learning JS
+	-->
+
 	<!-- Navbar -->
 	<nav class="navbar noshadow">
 
